--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -11,8 +11,7 @@ build:
 install:
   - mkdir C:\yasm
   - set YASM_URL="http://www.tortall.net/projects/yasm/releases/yasm-1.3.0-win64.exe"
-  - appveyor DownloadFile %YASM_URL% -FileName yasm.exe
-  - 7z x yasm.zip -oC:\yasm > nul
+  - appveyor DownloadFile %YASM_URL% -FileName C:\yasm\yasm.exe
   - set PATH=C:\yasm;%PATH%
 
 before_build:
