--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -19,5 +19,4 @@ before_build:
   - cd c:\projects\aom
   - mkdir _dist
   - cd _dist
-  - cmake c:\projects\aom -G "Visual Studio 14 2015"
-  - dir
+  - cmake c:\projects\aom -G "Visual Studio 14 2015 Win64"
