--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -5,9 +5,12 @@ clone_folder: c:\projects\aom
 platform: x64
 configuration: Release
 
+artifacts: &default_artifacts
+    - path: 'C:\projects\aom\_dist\Release\*.*'
+      name: aom
+
 build:
   project: c:\projects\aom\_dist\aom.sln
-
 install:
   - mkdir C:\yasm
   - set YASM_URL="http://www.tortall.net/projects/yasm/releases/yasm-1.3.0-win64.exe"
